complete all endpoints
